--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "next": "9.5.5",
+    "cross-env": "^7.0.3",
+    "next": "^10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.30.0"
