--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sra-website",
-  "version": "0.0.2",
+  "version": 0.2,
   "private": true,
   "author": "SRA Team",
   "description": "SRA Official Website",
