--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sra-website",
-  "version": 0.2,
+  "version": "0.0.1",
   "private": true,
   "author": "SRA Team",
   "description": "SRA Official Website",
@@ -24,8 +24,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "cross-env": "^7.0.3",
-    "next": "^10.0.9",
+    "next": "9.5.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.30.0"
