--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "emailjs-com": "^3.1.0",
-    "next": "9.5.5",
+    "markdown-to-jsx": "^7.1.3",
+    "next": "^9.5.5",
     "next-transpile-modules": "^7.3.0",
+    "raw-loader": "^4.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.30.0"
