--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-transpile-modules": "^7.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-facebook-login": "^4.1.1",
     "sass": "^1.30.0"
   },
   "browserslist": {
