--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@hookform/resolvers": "^2.8.2",
     "emailjs-com": "^3.1.0",
     "next": "9.5.5",
     "next-transpile-modules": "^7.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "sass": "^1.30.0"
+    "react-hook-form": "^7.18.0",
+    "sass": "^1.30.0",
+    "yup": "^0.32.11"
   },
   "browserslist": {
     "production": [
