--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "prettier": "^2.1.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "emailjs-com": "^3.1.0",
-    "markdown-to-jsx": "^7.1.3",
-    "next": "^9.5.5",
-    "next-transpile-modules": "^7.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "emailjs-com": "^3.2.0",
+    "markdown-to-jsx": "^7.1.7",
+    "next": "13.0.3",
+    "next-transpile-modules": "^10.0.0",
     "raw-loader": "^4.0.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "sass": "^1.30.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass": "^1.56.1"
   },
   "browserslist": {
     "production": [
