--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "emailjs-com": "^3.2.0",
     "markdown-to-jsx": "^7.1.7",
-    "next": "13.0.3",
+    "next": "^13.0.3",
     "next-transpile-modules": "^10.0.0",
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
