--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "markdown-to-jsx": "^7.1.7",
     "next": "13.0.3",
     "next-transpile-modules": "^10.0.0",
+    "package.json": "^0.0.0",
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
