--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
+    "jquery": "^3.7.1",
     "markdown-to-jsx": "^7.1.7",
-    "next": "13.0.3",
+    "next": "^13.5.6",
     "next-transpile-modules": "^10.0.0",
     "package.json": "^0.0.0",
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-responsive-carousel": "^3.2.23",
     "sass": "^1.56.1"
   },
   "browserslist": {
