--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "emailjs-com": "^3.2.0",
     "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
@@ -37,7 +39,8 @@
     "react-dom": "18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-responsive-carousel": "^3.2.23",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "three": "^0.183.0"
   },
   "browserslist": {
     "production": [
